tests/snapshots/regression/recovery__059_parser_error_recovery.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/059_parser_error_recovery.flx
exit_code: 1

[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 4 errors • tests/fixtures/recovery/059_parser_error_recovery.flx
error[E030]: Unknown Keyword

Unknown keyword `def`. Flux uses `fn` for function declarations.

  tests/fixtures/recovery/059_parser_error_recovery.flx:1:1
  |
1 | def foo() { 1 }
  | ^^^

Hint:
  Did you mean `fn`?


error[E034]: Missing Hash Colon

This hash entry needs `:` between the key and value.

  tests/fixtures/recovery/059_parser_error_recovery.flx:1:15
  |
1 | def foo() { 1 }
  |               ^

Hint:
  Hash literals use `{key: value, ...}`.


error[E034]: Invalid Match Arm Separator

Match arms are separated by `,` in Flux, not `|`.

  tests/fixtures/recovery/059_parser_error_recovery.flx:2:18
  |
2 | match x { 0 -> 1 | 1 -> 2 }
  |                  ^

Hint:
  Replace `|` with `,`.

Note:
  while parsing `match` expression


error[E034]: Missing Match Arm Arrow

This match arm needs `->`, not `=>`.

  tests/fixtures/recovery/059_parser_error_recovery.flx:3:13
  |
3 | match y { 0 => 0, _ -> 1 }
  |             ^^

Note:
  while parsing `match` expression

Help:
  Replace `=>` with `->`.

Found 4 errors.
