tests/snapshots/regression/recovery__double_comma_in_call_then_continue.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/double_comma_in_call_then_continue.flx
exit_code: 1

[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 1 error • tests/fixtures/recovery/double_comma_in_call_then_continue.flx
error[E034]: Unexpected Token

Expected expression after `,`, got `,`.

  tests/fixtures/recovery/double_comma_in_call_then_continue.flx:1:6
  |
1 | f(1, , 2);
  |      ^
