tests/snapshots/regression/recovery__missing_commas_then_continue.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/missing_commas_then_continue.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 2 errors • tests/fixtures/recovery/missing_commas_then_continue.flx
error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/recovery/missing_commas_then_continue.flx:1:9
  |
1 | print(1 2 3);
  |         ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/recovery/missing_commas_then_continue.flx:1:11
  |
1 | print(1 2 3);
  |           ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.

Found 2 errors.
