tests/snapshots/regression/recovery__type_annotation_recovery.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/type_annotation_recovery.flx
exit_code: 1

Error[E034]: Unexpected Token

I was expecting a type here, but I found `=`.

  tests/fixtures/recovery/type_annotation_recovery.flx:1:8
  |
1 | let x: = 1
  |        ^


Error[E034]: Unexpected Token

I was expecting a type here, but I found `,`.

  tests/fixtures/recovery/type_annotation_recovery.flx:4:9
  |
4 | fn f(a: , b: Int) {
  |         ^

Note:
  while parsing function `f`


Error[E034]: Unexpected Token

I was expecting a type here, but I found `{`.

  tests/fixtures/recovery/type_annotation_recovery.flx:9:11
  |
9 | fn g() -> {
  |           ^

Note:
  while parsing function `g`


Error[E034]: Unexpected Token

I was expecting a type here, but I found `->`.

  tests/fixtures/recovery/type_annotation_recovery.flx:14:15
   |
14 | let lam = /x: -> x
   |               ^^

Note:
  while parsing lambda expression

Found 4 errors.
